--- a/css/control.css
+++ b/css/control.css
@@ -15,6 +15,35 @@ body {
   /*display: inline-block;*/
   margin: 0 0 1.9em 0;
 }
+.top-nav {
+  padding: 5px 0px;
+  margin: 0 0 1.4em 0;
+  border-bottom: 1px dotted gray;
+  width: 100%; 
+}
+.top-nav:before,
+.top-nav:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.top-nav:after {
+  clear: both;
+}
+.top-nav ul {
+  margin: 0;
+  padding: 0;
+}
+.top-nav ul li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: inline-block;
+}
+.top-nav ul li a {
+  outline: none;
+}
 .navbar-collapse {
   padding-left: 0px;
 }
