--- a/css/less/gui/base.less
+++ b/css/less/gui/base.less
@@ -14,8 +14,26 @@ html, body {
   margin: 0 0 1.9em 0;
 }
 
-
-
+.top-nav {
+  padding: 5px 0px;
+  margin: 0 0 1.4em 0;
+  border-bottom: 1px dotted gray;
+  width: 100%;
+  .clearfix();
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: inline-block;
+      a {
+        outline:none;
+      }
+    }
+  }
+}
 .navbar-collapse {
   padding-left: 0px;
 }
