--- a/css/less/gui/base.less
+++ b/css/less/gui/base.less
@@ -131,6 +131,60 @@ html, body {
 }
 
 
+// Top widget table
+table.top_widget {
+  thead {
+    #gradient > .vertical(@start-color: #f8e2bf; @end-color: #f6cd90);
+    tr {
+      border-color: #c67b09;
+      border-style: solid;
+      border-width: 1px;
+    }
+    th {
+      border-color: #c67b09;
+      border-style: solid;
+      border-bottom-width: 1px;
+      border-left-width: 0px;
+      border-right-width: 0px;
+      border-top-width: 0px;
+      color: #633c16;
+      text-transform: uppercase;
+    }
+  }
+  tbody {
+    tr {
+      border-color: #c8c8c8;
+      border-left-width: 1px;
+      border-right-width: 1px;
+      border-bottom-width: 0px;
+      border-top-width: 0px;
+      border-style: solid;
+      td {
+        vertical-align: middle;
+        img {
+          display: inline-block;
+          float: left;
+          width: 25%;
+        }
+      }
+      td.widget_title,
+      td.widget_ratings,
+      td.widget_bonus,
+      td.widget_download {
+        border-color: #f9f2e6;
+        border-style: solid;
+        border-left-width: 1px;
+        border-right-width: 1px;
+        border-top-width: 1px;
+        border-bottom-width: 0px;
+      }
+    }
+  }
+  .widget_count {
+    text-align: center;
+  }
+}
+
 footer.footer {
   background-color: #252525;
   border-top-width: 4px;
