small css changes

--- a/css/less/gui/base.less
+++ b/css/less/gui/base.less
@@ -4,6 +4,9 @@ html, body {
   background-position: 0px 0px;
   background-size: cover;
 }
+a {
+  color: #252525;
+}
 #wrapper {
   background-color: @wrapper-bg;
   .box-shadow(@shadow);
