--- a/css/control.css
+++ b/css/control.css
@@ -6,6 +6,9 @@ body {
   background-position: 0px 0px;
   background-size: cover;
 }
+a {
+  color: #252525;
+}
 #wrapper {
   background-color: #ffffff;
   -webkit-box-shadow: inset 0 1px 1px #808080, 0 0 6px #ededed;
